--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
   },
   "homepage": "https://github.com/kishtarn555/rekarel-binary#readme",
   "dependencies": {
-    "@rekarel/core": "^3.0.0"
+    "@rekarel/core": "^3.1.0-beta.2"
   }
 }
